--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "server",
+  "name": "econav-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,5 +20,8 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
